# poems

./: .env  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  private_key.pem  public_key.pem  record.json
front-end/: README.md  index.html  package.json  tailwind.config.js
front-end/src/: App.jsx
front-end/src/components/: AccountQuery.jsx  Aleo.jsx  Decrypt.jsx  Generation.jsx  Header.jsx  Progress.jsx  Steps.jsx  index.js
front-end/src/container/: Layout.jsx
front-end/src/context/: PoemsContext.jsx
front-end/src/hooks/: usePersist.js
front-end/src/shared/input/: index.jsx
poems-demo/: package.json
poems-demo/src-tauri/: Cargo.toml  tauri.conf.json
poems-frontend/: package-lock.json
poems-frontend/src/: index.css
poems-frontend/src/components/: Decrypt.jsx  Generation.jsx  Header.jsx  PoemsReturn.jsx
poems-frontend/src/hooks/: usePersist.js
poems-react/: README.md  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
poems-react/css/: styles.css
poems-react/src/: App.jsx  main.jsx
poems-react/src/components/: AccountQuery.jsx  Aleo.jsx  Decrypt.jsx  Generation.jsx  PoemsReturn.jsx  Progress.jsx  Steps.jsx
poems-react/src/context/: PoemsContext.jsx
poems-react/src/hooks/: usePoemContext.js
poems-react/src/shared/containers/: index.jsx
poems-react/src/shared/input/: index.jsx
poems_react/: package-lock.json  package.json
src/: App.jsx  README.md  lib.rs  main.rs
src-tauri/: .gitignore  Cargo.toml  private_key.pem  public_key.pem  record.json  tauri.conf.json
src-tauri/icons/: poemsfeather.icns
src-tauri/src/: main.rs
src-tauri/src/generation_procedure/: aes.rs  bip39.rs
src-tauri/src/stored_procedure/: README.md  errorzk.rs  kellmen.rs  keys.rs  mod.rs  record.rs
src/Generation/: aes.rs  bip39.rs  mod.rs  rsa.rs  sha256.rs
src/StoredProcedure/: accountquery.rs  accountquery.txt  blindassetrecord.rs  blindassetrecord.txt  keys.rs  keys.txt  mod.txt  record.txt
src/generation_procedure/: README.md  aes.rs  bip39.rs  rsa.rs  sha256.rs
src/stored_procedure/: accountquery.rs  blindassetrecord.rs  errorzk.rs  kellmen.rs  keys.rs  mod.rs  record.rs
wasm_lib/: Cargo.toml  Users:dylankawalec:Develope.textClipping
wasm_lib/src/: lib.rs
