[package]
name = "poems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
aes-gcm = { version = "0.10.2", features = ["heapless"] }
base64 = "0.21.2"
bip39 = "2.0.0"
colored = "2.0.4"
data-encoding = "2.4.0"
heapless = "0.7.16"
hex = "0.4.3"
hkdf = "0.12.3"
hmac-sha256 = "1.1.7"
num-bigint = "0.4.3"
pem = "2.0.1"
rand = "0.8.5"
rand_core = "0.6.4"
rsa = { version = "0.9.2", features = ["std" , "pem"]}
rustyline = "12.0.0"
sha2 = "0.10.7"
simple_asn1 = "0.6.2"
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib"]

[profile.dev.package.num-bigint-dig]
opt-level = 3


