[package]
name = "poems"
version = "0.2.5"
edition = "2018"
description="Encrypt inputs into a Zero Knowledge Proof Hash Mixer, and return the values and decrypt using decryption keys"

# crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
aes = "0.8.3"
aes-gcm = { version = "0.10.2", features = ["heapless"] }
anyhow = "1.0.75"
async-std = "1.12.0"
base64 = "0.21.2"
bip39 = "2.0.0"
cbc = "0.1.2"
clap = "4.4.0"
colored = "2.0.4"
data-encoding = "2.4.0"
dirs = "5.0.1"
dotenv = "0.15.0"
flate2 = "1.0.26"
heapless = "0.7.16"
hex = "0.4.3"
hex-literal = "0.4.1"
hkdf = "0.12.3"
hmac-sha256 = "1.1.7"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
once_cell = "1.18.0"
pem = "2.0.1"
rand = "0.8.5"
rand_core = "0.6.4"
reqwest = "0.11.20"
rsa = { version = "0.9.2", features = ["std" , "pem"]}
rustyline = "12.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.181"
serde_json = "1.0.104"
sha2 = "0.10.7"
simple_asn1 = "0.6.2"
snarkos-cli = "2.1.6"
snarkos-display = "2.1.6"
tokio = { version = "1", features = ["full"] }
webbrowser = "0.8.10"

[lib]
name = "poems"
path = "src/lib.rs"


[profile.dev.package.num-bigint-dig]
opt-level = 3

[dev-dependencies]
rusty-hook = "^0.11.2"


[[bin]]
name = "decrypt"
path = "src/bin/decrypt.rs"

[[bin]]
name = "registration"
path = "src/bin/registration.rs"


[[bin]]
name = "environment"
path = "src/bin/environment.rs"

